--- a/TableViewEdit/Base.lproj/Main.storyboard
+++ b/TableViewEdit/Base.lproj/Main.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="shp-h4-lO7">
-    <device id="ipad9_7" orientation="landscape">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14313.18" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="0Wz-KA-Hk5">
+    <device id="ipad9_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14283.14"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -15,14 +15,14 @@
             <objects>
                 <viewController id="9U4-ee-0xx" customClass="TableViewControllerEdit" customModule="TableViewEdit" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="eut-tq-kEb">
-                        <rect key="frame" x="0.0" y="0.0" width="1024" height="768"/>
+                        <rect key="frame" x="0.0" y="0.0" width="768" height="1024"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="SDt-HI-e5D">
-                                <rect key="frame" x="0.0" y="64" width="1024" height="704"/>
+                                <rect key="frame" x="0.0" y="70" width="768" height="904"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <view key="tableHeaderView" contentMode="scaleToFill" id="oWp-X3-dLU">
-                                    <rect key="frame" x="0.0" y="0.0" width="1024" height="306"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="768" height="306"/>
                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                     <subviews>
                                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="IMG_0428" translatesAutoresizingMaskIntoConstraints="NO" id="vIp-rx-hVW">
@@ -88,10 +88,10 @@
                                 </view>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="default" accessoryType="disclosureIndicator" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="Cell" rowHeight="104" id="t1Z-8s-8g2" userLabel="Pièces Détachées" customClass="CustumTableViewCell" customModule="TableViewEdit" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="334" width="1024" height="104"/>
+                                        <rect key="frame" x="0.0" y="334" width="768" height="104"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="t1Z-8s-8g2" id="2b1-Dw-qsi" customClass="CustumTableViewCell" customModule="TableViewEdit" customModuleProvider="target">
-                                            <rect key="frame" x="0.0" y="0.0" width="991" height="103.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="735" height="103.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hXW-TW-DFY">
@@ -121,10 +121,10 @@
                                         </connections>
                                     </tableViewCell>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="default" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="Cella" rowHeight="104" id="DQE-73-4R6" userLabel="Coirroies" customClass="CustumTableViewCell" customModule="TableViewEdit" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="438" width="1024" height="104"/>
+                                        <rect key="frame" x="0.0" y="438" width="768" height="104"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="DQE-73-4R6" id="VSz-Ko-yKs" customClass="CustumTableViewCell" customModule="TableViewEdit" customModuleProvider="target">
-                                            <rect key="frame" x="0.0" y="0.0" width="1024" height="103.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="768" height="103.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="npy-Eu-TxW">
@@ -154,10 +154,10 @@
                                         </connections>
                                     </tableViewCell>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="Cellb" rowHeight="104" id="cgr-cf-9cO" userLabel="Filtres" customClass="CustumTableViewCell" customModule="TableViewEdit" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="542" width="1024" height="104"/>
+                                        <rect key="frame" x="0.0" y="542" width="768" height="104"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="cgr-cf-9cO" id="FFH-IP-UNW" customClass="CustumTableViewCell" customModule="TableViewEdit" customModuleProvider="target">
-                                            <rect key="frame" x="0.0" y="0.0" width="1024" height="103.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="768" height="103.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6G9-PH-sKb">
@@ -187,10 +187,10 @@
                                         </connections>
                                     </tableViewCell>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="Cellc" rowHeight="104" id="hBK-we-Z80" userLabel="Gaz" customClass="CustumTableViewCell" customModule="TableViewEdit" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="646" width="1024" height="104"/>
+                                        <rect key="frame" x="0.0" y="646" width="768" height="104"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="hBK-we-Z80" id="vML-ps-yx7" customClass="CustumTableViewCell" customModule="TableViewEdit" customModuleProvider="target">
-                                            <rect key="frame" x="0.0" y="0.0" width="1024" height="103.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="768" height="103.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Na8-wI-OaG">
@@ -250,15 +250,16 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="GSA-IK-DwQ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1914.2578124999998" y="190.625"/>
+            <point key="canvasLocation" x="-1446" y="-164"/>
         </scene>
-        <!--Navigation Controller-->
+        <!--Item-->
         <scene sceneID="vAf-7p-vIx">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="shp-h4-lO7" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="c8a-qg-cSk"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="e8P-St-JTZ">
-                        <rect key="frame" x="0.0" y="20" width="1024" height="44"/>
+                        <rect key="frame" x="0.0" y="20" width="768" height="50"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
@@ -268,7 +269,68 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="yYx-an-1pC" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-3028" y="190"/>
+            <point key="canvasLocation" x="-2272" y="-164"/>
+        </scene>
+        <!--Item-->
+        <scene sceneID="u5K-wv-DSR">
+            <objects>
+                <viewController id="fxT-Ex-DQd" customClass="GestionGazViewController" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="H3r-pX-GEg">
+                        <rect key="frame" x="0.0" y="0.0" width="768" height="1024"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="J9D-8s-dfH">
+                                <rect key="frame" x="471" y="59" width="170" height="67"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" red="0.92338305710000002" green="0.44621491429999999" blue="0.18399173020000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                <state key="normal" title="Bouton Contrats">
+                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                </state>
+                            </button>
+                            <pickerView contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="84j-iz-Gny">
+                                <rect key="frame" x="20" y="59" width="443" height="152"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                            </pickerView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Loi-XO-nY3">
+                                <rect key="frame" x="471" y="152" width="269" height="59"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="23"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="aZX-Ua-BXV"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Item" id="r4c-Jh-7nA"/>
+                    <connections>
+                        <outlet property="boutonContrat" destination="J9D-8s-dfH" id="arw-qO-4Qg"/>
+                        <outlet property="labelContrat" destination="Loi-XO-nY3" id="qro-2J-6Yk"/>
+                        <outlet property="pickerContrat" destination="84j-iz-Gny" id="x8i-dL-QJm"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="c5s-4t-Gb9" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-2272.65625" y="939.84374999999989"/>
+        </scene>
+        <!--Tab Bar Controller-->
+        <scene sceneID="ZJO-zn-JQB">
+            <objects>
+                <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="0Wz-KA-Hk5" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="Jw3-rd-lQR">
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="shp-h4-lO7" kind="relationship" relationship="viewControllers" id="qQw-1c-tsj"/>
+                        <segue destination="fxT-Ex-DQd" kind="relationship" relationship="viewControllers" id="yt1-AA-2Fl"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="fMV-fu-kQP" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-3028.125" y="189.84375"/>
         </scene>
     </scenes>
     <resources>
