--- a/TableViewEdit/Base.lproj/Main.storyboard
+++ b/TableViewEdit/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14313.18" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="0Wz-KA-Hk5">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14313.18" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="5Sx-hQ-XhB">
     <device id="ipad9_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -10,7 +10,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Table View Controller Edit-->
+        <!--Item-->
         <scene sceneID="ZEi-JJ-hvy">
             <objects>
                 <viewController id="9U4-ee-0xx" customClass="TableViewControllerEdit" customModule="TableViewEdit" customModuleProvider="target" sceneMemberID="viewController">
@@ -19,7 +19,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="SDt-HI-e5D">
-                                <rect key="frame" x="0.0" y="70" width="768" height="904"/>
+                                <rect key="frame" x="0.0" y="20" width="768" height="954"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <view key="tableHeaderView" contentMode="scaleToFill" id="oWp-X3-dLU">
                                     <rect key="frame" x="0.0" y="0.0" width="768" height="306"/>
@@ -236,6 +236,7 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="WOg-FS-Wbl"/>
                     </view>
+                    <tabBarItem key="tabBarItem" title="Item" id="0oz-F4-jxi"/>
                     <navigationItem key="navigationItem" id="8Gg-0N-yFa">
                         <barButtonItem key="rightBarButtonItem" systemItem="edit" id="ik9-Xy-rzX">
                             <connections>
@@ -250,31 +251,12 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="GSA-IK-DwQ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1446" y="-164"/>
-        </scene>
-        <!--Item-->
-        <scene sceneID="vAf-7p-vIx">
-            <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="shp-h4-lO7" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Item" id="c8a-qg-cSk"/>
-                    <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="e8P-St-JTZ">
-                        <rect key="frame" x="0.0" y="20" width="768" height="50"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                    </navigationBar>
-                    <nil name="viewControllers"/>
-                    <connections>
-                        <segue destination="9U4-ee-0xx" kind="relationship" relationship="rootViewController" id="QYn-c9-GKx"/>
-                    </connections>
-                </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="yYx-an-1pC" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="-2272" y="-164"/>
+            <point key="canvasLocation" x="-1421.09375" y="-164.0625"/>
         </scene>
         <!--Item-->
         <scene sceneID="u5K-wv-DSR">
             <objects>
-                <viewController id="fxT-Ex-DQd" customClass="GestionGazViewController" sceneMemberID="viewController">
+                <viewController id="fxT-Ex-DQd" customClass="GestionGazViewController" customModule="TableViewEdit" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="H3r-pX-GEg">
                         <rect key="frame" x="0.0" y="0.0" width="768" height="1024"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -303,7 +285,8 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="aZX-Ua-BXV"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Item" id="r4c-Jh-7nA"/>
+                    <tabBarItem key="tabBarItem" title="Item" id="Iuv-an-tTi"/>
+                    <navigationItem key="navigationItem" id="aSW-KQ-WD7"/>
                     <connections>
                         <outlet property="boutonContrat" destination="J9D-8s-dfH" id="arw-qO-4Qg"/>
                         <outlet property="labelContrat" destination="Loi-XO-nY3" id="qro-2J-6Yk"/>
@@ -312,7 +295,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="c5s-4t-Gb9" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-2272.65625" y="939.84374999999989"/>
+            <point key="canvasLocation" x="-1506" y="593"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="ZJO-zn-JQB">
@@ -323,14 +306,28 @@
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </tabBar>
-                    <connections>
-                        <segue destination="shp-h4-lO7" kind="relationship" relationship="viewControllers" id="qQw-1c-tsj"/>
-                        <segue destination="fxT-Ex-DQd" kind="relationship" relationship="viewControllers" id="yt1-AA-2Fl"/>
-                    </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="fMV-fu-kQP" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-3028.125" y="189.84375"/>
+            <point key="canvasLocation" x="-2977" y="-164"/>
+        </scene>
+        <!--Tab Bar Controller-->
+        <scene sceneID="cbX-l5-yzC">
+            <objects>
+                <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="5Sx-hQ-XhB" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="ZQr-1G-xtm">
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="9U4-ee-0xx" kind="relationship" relationship="viewControllers" id="GQ8-o7-a16"/>
+                        <segue destination="fxT-Ex-DQd" kind="relationship" relationship="viewControllers" id="kh2-jv-Wez"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="v6r-Bn-97P" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-2186.71875" y="-164.0625"/>
         </scene>
     </scenes>
     <resources>
