--- a/TableViewEdit/Base.lproj/Main.storyboard
+++ b/TableViewEdit/Base.lproj/Main.storyboard
@@ -281,6 +281,10 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <pickerView contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="dFC-nG-ysc">
+                                <rect key="frame" x="29" y="247" width="434" height="162"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                            </pickerView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="aZX-Ua-BXV"/>
@@ -290,12 +294,13 @@
                     <connections>
                         <outlet property="boutonContrat" destination="J9D-8s-dfH" id="arw-qO-4Qg"/>
                         <outlet property="labelContrat" destination="Loi-XO-nY3" id="qro-2J-6Yk"/>
+                        <outlet property="pickerBatiment" destination="dFC-nG-ysc" id="drZ-Eg-IE9"/>
                         <outlet property="pickerContrat" destination="84j-iz-Gny" id="x8i-dL-QJm"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="c5s-4t-Gb9" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1506" y="593"/>
+            <point key="canvasLocation" x="-1506.25" y="592.96875"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="ZJO-zn-JQB">
